tests/NormalTests/paczka2/big_fuzzy/22744538.err
Error in line 5: xuH A718 0,9
Error in line 6: 4SU S493 62,3
Error in line 16: fnfHv S236 91,0
Error in line 14: A718 S236 1205,9
Error in line 23: fnfHv S198 92,3
Error in line 30: xuH S198 27,0
Error in line 26: fnfHv S236 85,7
Error in line 35: fnfHv S198 53,2
Error in line 43: vQTCan S493 61,9
Error in line 33: A718 S493 55,5
Error in line 47: JZt S198 48,9
Error in line 46: 4SU S198 16,1
Error in line 58: NbON3bUs0g A718 68,7
Error in line 78: vQTCan S198 131,29
Error in line 80: JZt S236 57,4
Error in line 72: vQTCan S198 72,5
Error in line 77: fnfHv S493 45,9
Error in line 87: fnfHv S198 0,0
Error in line 97: vQTCan A718 57,2
Error in line 112: JZt S198 117,8
Error in line 113: vQTCan S493 39,9
Error in line 118: JZt A718 18,7
Error in line 107: xuH S236 189,2
Error in line 128: A718 A718 29,3
Error in line 156: vQTCan S236 63,8
Error in line 157: vQTCan S493 93,1
Error in line 161: 4SU S198 32,82
Error in line 167: vQTCan S493 76,9
Error in line 172: fnfHv A718 49,1
Error in line 139: A718 S236 90,6
Error in line 183: xuH S493 217,2
Error in line 185: xuH S236 68,9
Error in line 178: A718 S493 20,1
Error in line 191: fnfHv S198 72,5
Error in line 189: NbON3bUs0g S198 16,8
Error in line 188: A718 S236 69,6
Error in line 196: NbON3bUs0g S236 81,5
Error in line 195: fnfHv A718 1,2
Error in line 201: NbON3bUs0g S493 97,7
Error in line 209: fnfHv S198 52,3
Error in line 213: NbON3bUs0g A718 -3,2
Error in line 224: xuH A718 81,0
Error in line 225: xuH S493 71,0
Error in line 223: JZt S493 74,3
Error in line 208: NbON3bUs0g A718 55,5
